add create profile

--- a/app/views/profile/_profile.html.haml
+++ b/app/views/profile/_profile.html.haml
@@ -16,7 +16,7 @@
           神山 大晟 (Taisei Kamiyama)
         .writing
           %li  青森県出身の２２歳。2019年から本格的にプログラミング学習を開始。
-          %li  現在テックエキスパート68期生として学習中。
+          %li  2020年3月テックキャンプ卒業
           %li  主にHTML , CSS  , Javascript , jQueryが得意。
         .birthday
           誕生日:  1997/03/04
