add fixed image compression

--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -1,7 +1,7 @@
 .contact{
   width: 100vw;
   height: 100vh;
-  background-image: url("/assets/freePhone.jpg");
+  background-image: url("/assets/freePhone-min.-compressionjpg.jpg");
   background-size: cover;
   color: white;
   text-shadow: 10px 5px 4px  #DD0000;
