--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,7 +1,7 @@
 .profile{
   width: 100vw;
   height: 100vh;
-  background-image: url("/assets/freeBike.jpg");
+  background-image: url("/assets/freeBike-min-compression.jpg");
   background-size: cover;
   
   .profile-header{
