--- a/app/assets/stylesheets/service.scss
+++ b/app/assets/stylesheets/service.scss
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
   background-color: cyan;
-  background-image: url("/assets/freeCoffe.jpg");
+  background-image: url("/assets/freeCoffe-min-compression.jpg");
   background-size: cover;
   .my-services{
     width: 100%;
