--- a/app/assets/stylesheets/skill.scss
+++ b/app/assets/stylesheets/skill.scss
@@ -1,7 +1,7 @@
 .skill{
   width: 100vw;
   height: 100vh;
-  background-image: url("/assets/freeLetter.jpg");
+  background-image: url("/assets/freeLetter-min-compression.jpg");
   background-size: cover;
   align-items: center;
   
